Fixed featured video inner background alignment.

--- a/wp-content/plugins/ovr-featured-video-widget/ovr-featured-video-widget.css
+++ b/wp-content/plugins/ovr-featured-video-widget/ovr-featured-video-widget.css
@@ -1,18 +1,16 @@
 .ovr_featured_video {
   width: 100%;
   background: rgb(236,236,236);
-  margin: auto;
   height: 320px;
 }
 
 .ovr_featured_video_inner {
   position: relative;
+  top: 10px;
   width: 96%;
-  height: 92%;
+  height: 93%;
   background: rgb(255,255,255);
   display: block;
-  margin: auto;
-  padding-bottom: 20px;
   text-align: center;
 }
 
